--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+config.json
+
 # Binaries for programs and plugins
 *.exe
 *.dll
@@ -12,3 +14,4 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+.idea/
