--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -30,6 +30,10 @@
   version = "1.13.7"
 
 [[constraint]]
+  name = "github.com/aws/aws-lambda-go"
+  version = "1.1.0"
+
+[[constraint]]
   name = "github.com/sirupsen/logrus"
   version = "1.0.4"
 
