--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      go: 1.11.2
+      golang: 1.11.2
   build:
     commands:
       - ls -lah
