--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
   build:
     commands:
       - ls -lah
-      - go build main.go
+      - go build ./...
       - ls -lah
 artifacts:
   files:
