--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
   build:
     commands:
       - ls -lah
-      - GO111MODULE=on go build ./...
+      - GO111MODULE=on go build
       - ls -lah
 artifacts:
   files:
